@@ -1,5 +1,5 @@
 [Settings]
-NumFields=1
+NumFields=2
 
 [Field 1]
 Type=label
@@ -8,3 +8,12 @@ Left=0
 Right=-1
 Top=0
 Bottom=10
+
+[Field 2]
+Type=text
+Left=0
+Right=-1
+Top=20
+Bottom=100
+flags=MULTILINE|VSCROLL|READONLY
+State="Description:\r\n\r\n1 - Show custom page A (where you are now)\r\n2 - Show the components page\r\n3 - Show custom page B\r\n4 - Show directory page\r\n5 - Show custom page C\r\n6 - Show installation progress"
